MDEV-25906 : SIGSEGV in flush_tables_with_read_lock on FTWRL or FTFE | SIGSEGV in ha_maria::extra

Problem was that flush_tables_with_read_lock did not check
is base table database information_schema or performance_schema
where FLUSH is not supported. Furthermore, it did not check
is there even any base table.